--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "drizzle-kit": "^0.31.7",
     "typescript": "~5.8.2",
